Add donate link

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
           <img class="img-circle img-responsive fade-in" src="https://raw.github.com/LessonPlanet/lp-movember/master/{{user.handle}}/{{date}}-bw.jpg" missing-image flipbook ng-repeat="date in dates" />
         </div>
       </div>
+      <h3 class="text-center">
+        <a href="https://docs.google.com/a/lessonplanet.com/spreadsheet/ccc?key=0Ah2LD7TOZmqYdGhwb01aeGxiUjNlZENYeEtGQ2FoYmc&usp=drive_web#gid=0">sponsor a stache!</a>
+      </h3>
     </div>
   </body>
 </html>
