--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <h2 class="text-center">{{user.name}}</h2>
         </div>
       </div>
-      <div class="row">
+      <div class="row" style="min-height: 400px">
         <div class="col-md-3" ng-repeat="user in users">
           <img class="img-circle img-responsive fade-in" src="https://raw.github.com/LessonPlanet/lp-movember/master/{{user.handle}}/{{date}}-bw.jpg" missing-image flipbook ng-repeat="date in dates" />
         </div>
